# FIT_VUT_PROJECTS

./: README.md
Year1/IOS/: Makefile  README.md  proj2.c
Year1/ITW/: README.md  index.html  mobile.css  script.js  style.css
Year2/IAL/: README.md
Year2/IAL/DU1/: c201.c  c203.c  c206.c
Year2/IAL/DU2/: c016.c  c401.c  c402.c
Year2/ICS/: README.md
Year2/IDS/: Dokumentacia.docx  README.md
Year2/IDS/Skript1/: xjurik12_xmicek08.sql
Year2/IFJ/: IFJ20.code  Makefile  README.md  codegenerator-test.c  codegenerator.c  codegenerator.h  compiler.c  dynamicstring-test.c  dynamicstring.c  dynamicstring.h  error.c  error.h  expressions-test.c  expressions.c  expressions.h  lexer-test.c  lexer.c  lexer.h  parser.c  parser.h  rozdeleni  stack.c  stack.h  symtable-test.c  symtable.c  symtable.h  test_file.go
Year2/IFJ/assets/: LL.txt
Year2/IFJ/failing_tests/: readme.md
Year2/IFJ/suspected/: 5.go  6.go  7.go  assembly_errors.go  decl_sem_errors.go  expr_sem_errors.go  other_sem_errors.go  prolog_syntax_error.go  statement_sem_error.go  statement_syntax_errors.go
Year2/IFJ/test_files/: 1.go  10.go  2.go  3.go  4.go  5.go  6.go  7.go  (+9 more)
Year2/IPK/: Makefile  README.md  ipk-l4-scan.cpp  ipk-l4-scan.hpp
Year2/IPP/: README.md  interpret.py  parse.php  test.php
Year3/IMS/: CMakeLists.txt  Makefile  README.md  ims.cpp
Year3/IMS/src/ArgParser/: ArgParser.cpp  ArgParser.h  Argopt.h  CMakeLists.txt
Year3/IMS/src/GreenDealSimulation/: CMakeLists.txt  GreenDealSimulation.cpp  GreenDealSimulation.h
Year3/ISA/: AU_Se  AuthFile  Makefile  README.md  popcl.cpp  popcl.hpp
(+89 files in other folders)
